overflow hidden-to stop scroll on touchscreen

--- a/client/src/containers/App/App.css
+++ b/client/src/containers/App/App.css
@@ -2,6 +2,7 @@
   font-family: "Nunito", sans-serif;
   background-color: rgb(0, 0, 0);
   color: #fff;
+  overflow: hidden;
 }
 
 .App-header {
